# Integracao-Jupyter-com-Power-BI

./: README.md  artigo.md  pyproject.toml
notebook/: Visualize with Power BI demo.ipynb  artigo.ipynb  integracao_jupyter_powerbi.html  integracao_jupyter_powerbi.ipynb
