[tool.poetry]
name = "integracao-jupyter-com-power-bi"
version = "0.1.0"
description = ""
authors = ["Julio Okuda <julio.okuda@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.0.0"
lab = "^8.2"
powerbiclient = "^3.1.1"
openpyxl = "^3.1.4"
pandas = "^2.2.2"
jupyterlab = "^3.4.5"
install = "^1.3.5"
python-dotenv = "^1.0.1"
datadotworld = "^2.0.0"
ipywidgets = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
