[tool.poetry]
name = "integracao-jupyter-com-power-bi"
version = "0.1.0"
description = ""
authors = ["Julio Okuda <julio.okuda@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
lab = "^8.2"
openpyxl = "^3.1.4"
pandas = "^2.2.2"
install = "^1.3.5"
datadotworld = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
