[tool.poetry]
name = "integracao-jupyter-com-power-bi"
version = "0.1.0"
description = ""
authors = ["Julio Okuda <julio.okuda@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openpyxl = "^3.1.4"
pandas = "^2.2.2"
install = "^1.3.5"
datadotworld = "^2.0.0"
jupyter = "^1.0.0"
notebook = "^7.2.1"
powerbiclient = "^3.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
